--- a/daldal_teamProject/.classpath
+++ b/daldal_teamProject/.classpath
@@ -13,5 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/kosta/Desktop/mybatis-3.4.5/mybatis-3.4.5/mybatis-3.4.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
